check_output.txt
    Checking alchemist v0.1.0 (C:\Users\Zakary Halmstad\Desktop\alchemist)
error[E0425]: cannot find value `total_duration` in this scope
  --> src\orchestrator.rs:63:37
   |
63 |         info!("  Duration: {:.2}s", total_duration);
   |                                     ^^^^^^^^^^^^^^ not found in this scope

error[E0603]: enum import `QualityProfile` is private
  --> src\lib.rs:29:74
   |
29 | pub use ffmpeg::{EncodeStats, EncoderCapabilities, HardwareAccelerators, QualityProfile};
   |                                                                          ^^^^^^^^^^^^^^ private enum import
   |
note: the enum import `QualityProfile` is defined here...
  --> src\ffmpeg.rs:4:32
   |
 4 | use crate::config::{CpuPreset, QualityProfile};
   |                                ^^^^^^^^^^^^^^
note: ...and refers to the enum `QualityProfile` which is defined here
  --> src\config.rs:18:1
   |
18 | pub enum QualityProfile {
   | ^^^^^^^^^^^^^^^^^^^^^^^ you could import this directly
help: import `QualityProfile` directly
   |
29 | pub use ffmpeg::{EncodeStats, EncoderCapabilities, HardwareAccelerators, config::QualityProfile};
   |                                                                          ++++++++

warning: unused import: `JobState`
 --> src\notifications.rs:6:22
  |
6 | use crate::db::{Job, JobState};
  |                      ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `error` and `info`
 --> src\notifications.rs:9:22
  |
9 | use tracing::{debug, error, info};
  |                      ^^^^^  ^^^^

error[E0599]: no method named `extensions` found for struct `Scanner` in the current scope
  --> src\watcher.rs:37:14
   |
36 |           let extensions: HashSet<_> = scanner
   |  ______________________________________-
37 | |             .extensions()
   | |             -^^^^^^^^^^ private field, not a method
   | |_____________|
   |
   |
  ::: src\scanner.rs:18:1
   |
18 |   pub struct Scanner {
   |   ------------------ method `extensions` not found for this struct
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `extensions`, perhaps you need to implement it:
           candidate #1: `tracing_subscriber::registry::SpanData`

error[E0282]: type annotations needed
  --> src\watcher.rs:39:19
   |
39 |             .map(|s| s.to_lowercase())
   |                   ^  - type must be known at this point
   |
help: consider giving this closure parameter an explicit type
   |
39 |             .map(|s: /* Type */| s.to_lowercase())
   |                    ++++++++++++

Some errors have detailed explanations: E0282, E0425, E0599, E0603.
For more information about an error, try `rustc --explain E0282`.
warning: `alchemist` (lib) generated 2 warnings
error: could not compile `alchemist` (lib) due to 4 previous errors; 2 warnings emitted
